--- a/util/httprelay/default.css
+++ b/util/httprelay/default.css
@@ -1,15 +1,23 @@
 body {
     background-color: white;
     color: #404040;
-    font-family: Verdana; Arial; Sans-Serif;
+    font-family: Helvetica,Arial,sans-serif;
     font-size: 12pt;
     padding: 1em;
 }
 h1 {
-    padding-top: 8px;
+    padding-top: 6px;
     height: 32px;
-    font-size: 16px;
+    font-size: 21px;
     background-image: url(favicon.png);
     background-repeat: no-repeat;
     padding-left: 40px;
+}
+h2 { font-size: 16px; }
+textarea {
+    margin-top: .5em;
+    margin-bottom: .5em;
+    font-family: Courier,fixed-width;
+    font-size: 12pt;
+    width: 100%;
 }
